@@ -1,3 +1,9 @@
+2011-01-25  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/libcommon/fd.c (fd_write_n, fd_timed_write_n):
+	  Changed "buf" arg type to const.
+	* src/libcommon/fd.h: Updated prototypes.
+
 2011-01-24  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/libcommon/fd.c: Tweaked spacing.
